--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <title>Belanja Suka Suka</title>
     <base href="http://localhost/ecommerce-pro/" />
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="">
     <meta name="author" content="">
     <!--<meta name="viewport" content="width=device-width, initial-scale=1.0" />-->
-    <link rel="stylesheet" href="css/bootstrap.css" />
+    <link rel="stylesheet" href="css/bootstrap.min.css" />
+    <link rel="stylesheet" href="css/custom-theme/jquery-ui-1.10.3.custom.css" />
     <link rel="stylesheet" href="css/custom-style.css" />
     <link rel="stylesheet" href="css/fhmm.css" />
     <link rel="stylesheet" href="css/font-awesome.css" />
@@ -45,14 +47,15 @@
             <!--</div>-->
 
         <div class="navbar-header">
-            <button type="button" data-toggle="collapse" data-target="#defaultmenu" class="navbar-toggle"><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button><a href="#" class="navbar-brand"><span class="glyphicon glyphicon-home"></span></a>
+            <button type="button" data-toggle="collapse" data-target="#defaultmenu" class="navbar-toggle"><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button><a href="index.html" class="navbar-brand"><span class="glyphicon glyphicon-home"></span></a>
         </div><!-- end navbar-header -->
 
         <div id="defaultmenu" class="navbar-collapse collapse">
         <ul class="nav navbar-nav">
-        <li class="active"><a href="#profile.html">Profile</a></li>
-        <li><a href="#cara-pembelian.html">How To Buy</a></li>
-        <li><a href="#cara-pembelian.html">Contact Us</a></li>
+        <li class="active"><a href="#profile.html" class="navlink">Profile</a></li>
+        <li><a href="#how-to-buy.html" class="navlink">How To Buy</a></li>
+        <li><a href="#contact-us.html" class="navlink">Contact Us</a></li>
+        <li><a href="#register.html" class="navlink" >Register</a></li>
         <!-- list elements -->
         <li class="dropdown fhmm-fw"><a href="#" data-toggle="dropdown" class="dropdown-toggle">Product <b class="caret"></b></a>
             <ul class="dropdown-menu fullwidth">
@@ -136,74 +139,74 @@
             </ul><!-- end drop down menu -->
         </li><!-- end list elements -->
         <!-- list elements -->
-        <li class="dropdown fhmm-fw"><a href="#" data-toggle="dropdown" class="dropdown-toggle">Mega Menu (Half) <b class="caret"></b></a>
-            <ul class="dropdown-menu half">
-                <li class="fhmm-content withoutdesc">
-                    <div class="row">
-                        <div class="col-sm-4">
-                            <ul>
-                                <li><a href="#"><i class="fa fa-laptop"></i> Laptop icon</a></li>
-                                <li><a href="#"><i class="fa fa-desktop"></i> Desktop icon</a></li>
-                                <li><a href="#"><i class="fa fa-android"></i> Android icon</a></li>
-                                <li><a href="#"><i class="fa fa-apple"></i> Apple icon</a></li>
-                                <li><a href="#"><i class="fa fa-windows"></i> Windows icon</a></li>
-                            </ul>
-                        </div>
-                        <div class="col-sm-4">
-                            <ul>
-                                <li><a href="#"><i class="fa fa-leaf"></i> Leaf icon</a></li>
-                                <li><a href="#"><i class="fa fa-heart-o"></i> Heart icon</a></li>
-                                <li><a href="#"><i class="fa fa-gear"></i> Gear icon</a></li>
-                                <li><a href="#"><i class="fa fa-camera-retro"></i> Camera icon</a></li>
-                                <li><a href="#"><i class="fa fa-bars"></i> Bars icon</a></li>
-                            </ul>
-                        </div>
-                        <div class="col-sm-4">
-                            <ul>
-                                <li><a href="#"><i class="fa fa-beer"></i> Beer icon</a></li>
-                                <li><a href="#"><i class="fa fa-code"></i> Code icon</a></li>
-                                <li><a href="#"><i class="fa fa-envelope-o"></i> Envelope icon</a></li>
-                                <li><a href="#"><i class="fa fa-flag-o"></i> Flag icon</a></li>
-                                <li><a href="#"><i class="fa fa-key"></i> Key icon</a></li>
-                            </ul>
-                        </div>
-                    </div><!-- end row -->
-                    <hr>
-                    <div class="row">
-                        <div class="col-sm-12">
-                            <p>Font Awesome gives you scalable
-                                vector icons that can instantly be customized — size, color, drop
-                                shadow, and anything that can be done with the power of CSS.</p>
-                            <p>Font Awesome font licensed under <a href="http://scripts.sil.org/OFL">SIL OFL 1.1</a> Code licensed under <a href="http://opensource.org/licenses/mit-license.html">MIT License</a> Documentation licensed under <a href="http://creativecommons.org/licenses/by/3.0/">CC BY 3.0</a></p>
-                        </div>
-                    </div><!-- end row -->
-                </li><!-- end grid demo -->
-            </ul><!-- end drop down menu -->
-        </li><!-- end list elements -->
+        <!--<li class="dropdown fhmm-fw"><a href="#" data-toggle="dropdown" class="dropdown-toggle">Mega Menu (Half) <b class="caret"></b></a>-->
+            <!--<ul class="dropdown-menu half">-->
+                <!--<li class="fhmm-content withoutdesc">-->
+                    <!--<div class="row">-->
+                        <!--<div class="col-sm-4">-->
+                            <!--<ul>-->
+                                <!--<li><a href="#"><i class="fa fa-laptop"></i> Laptop icon</a></li>-->
+                                <!--<li><a href="#"><i class="fa fa-desktop"></i> Desktop icon</a></li>-->
+                                <!--<li><a href="#"><i class="fa fa-android"></i> Android icon</a></li>-->
+                                <!--<li><a href="#"><i class="fa fa-apple"></i> Apple icon</a></li>-->
+                                <!--<li><a href="#"><i class="fa fa-windows"></i> Windows icon</a></li>-->
+                            <!--</ul>-->
+                        <!--</div>-->
+                        <!--<div class="col-sm-4">-->
+                            <!--<ul>-->
+                                <!--<li><a href="#"><i class="fa fa-leaf"></i> Leaf icon</a></li>-->
+                                <!--<li><a href="#"><i class="fa fa-heart-o"></i> Heart icon</a></li>-->
+                                <!--<li><a href="#"><i class="fa fa-gear"></i> Gear icon</a></li>-->
+                                <!--<li><a href="#"><i class="fa fa-camera-retro"></i> Camera icon</a></li>-->
+                                <!--<li><a href="#"><i class="fa fa-bars"></i> Bars icon</a></li>-->
+                            <!--</ul>-->
+                        <!--</div>-->
+                        <!--<div class="col-sm-4">-->
+                            <!--<ul>-->
+                                <!--<li><a href="#"><i class="fa fa-beer"></i> Beer icon</a></li>-->
+                                <!--<li><a href="#"><i class="fa fa-code"></i> Code icon</a></li>-->
+                                <!--<li><a href="#"><i class="fa fa-envelope-o"></i> Envelope icon</a></li>-->
+                                <!--<li><a href="#"><i class="fa fa-flag-o"></i> Flag icon</a></li>-->
+                                <!--<li><a href="#"><i class="fa fa-key"></i> Key icon</a></li>-->
+                            <!--</ul>-->
+                        <!--</div>-->
+                    <!--</div>&lt;!&ndash; end row &ndash;&gt;-->
+                    <!--<hr>-->
+                    <!--<div class="row">-->
+                        <!--<div class="col-sm-12">-->
+                            <!--<p>Font Awesome gives you scalable-->
+                                <!--vector icons that can instantly be customized — size, color, drop-->
+                                <!--shadow, and anything that can be done with the power of CSS.</p>-->
+                            <!--<p>Font Awesome font licensed under <a href="http://scripts.sil.org/OFL">SIL OFL 1.1</a> Code licensed under <a href="http://opensource.org/licenses/mit-license.html">MIT License</a> Documentation licensed under <a href="http://creativecommons.org/licenses/by/3.0/">CC BY 3.0</a></p>-->
+                        <!--</div>-->
+                    <!--</div>&lt;!&ndash; end row &ndash;&gt;-->
+                <!--</li>&lt;!&ndash; end grid demo &ndash;&gt;-->
+            <!--</ul>&lt;!&ndash; end drop down menu &ndash;&gt;-->
+        <!--</li>&lt;!&ndash; end list elements &ndash;&gt;-->
         <!-- standard drop down -->
-        <li class="dropdown"><a href="#" data-toggle="dropdown" class="dropdown-toggle">Flyout <b class="caret"></b></a>
-            <ul class="dropdown-menu" role="menu">
-                <li><a href="#">ThemeForest</a></li>
-                <li><a href="#">GraphicRiver</a></li>
-                <li><a href="#">PhotoDune</a></li>
-                <li class="dropdown-submenu">
-                    <a href="#">Envato Sites</a>
-                    <ul class="dropdown-menu">
-                        <li class="dropdown-submenu"><a href="#">Tuts+</a>
-                            <ul class="dropdown-menu">
-                                <li><a href="#">PSD Tuts</a></li>
-                                <li><a href="#">CODE Tuts</a></li>
-                            </ul>
-                        </li><!-- end dropdown-submenu -->
-                        <li><a href="#">We are Envato</a></li>
-                        <li><a href="#">Support Center</a></li>
-                    </ul><!-- end dropdown-menu -->
-                </li><!-- end dropdown-submenu -->
-                <li><a href="#">Creattica</a></li>
-                <li><a href="#">Microlancer</a></li>
-                <li><a href="#">ActiveDen</a></li>
-            </ul><!-- end dropdown-menu -->
-        </li><!-- end standard drop down -->
+        <!--<li class="dropdown"><a href="#" data-toggle="dropdown" class="dropdown-toggle">Flyout <b class="caret"></b></a>-->
+            <!--<ul class="dropdown-menu" role="menu">-->
+                <!--<li><a href="#">ThemeForest</a></li>-->
+                <!--<li><a href="#">GraphicRiver</a></li>-->
+                <!--<li><a href="#">PhotoDune</a></li>-->
+                <!--<li class="dropdown-submenu">-->
+                    <!--<a href="#">Envato Sites</a>-->
+                    <!--<ul class="dropdown-menu">-->
+                        <!--<li class="dropdown-submenu"><a href="#">Tuts+</a>-->
+                            <!--<ul class="dropdown-menu">-->
+                                <!--<li><a href="#">PSD Tuts</a></li>-->
+                                <!--<li><a href="#">CODE Tuts</a></li>-->
+                            <!--</ul>-->
+                        <!--</li>&lt;!&ndash; end dropdown-submenu &ndash;&gt;-->
+                        <!--<li><a href="#">We are Envato</a></li>-->
+                        <!--<li><a href="#">Support Center</a></li>-->
+                    <!--</ul>&lt;!&ndash; end dropdown-menu &ndash;&gt;-->
+                <!--</li>&lt;!&ndash; end dropdown-submenu &ndash;&gt;-->
+                <!--<li><a href="#">Creattica</a></li>-->
+                <!--<li><a href="#">Microlancer</a></li>-->
+                <!--<li><a href="#">ActiveDen</a></li>-->
+            <!--</ul>&lt;!&ndash; end dropdown-menu &ndash;&gt;-->
+        <!--</li>&lt;!&ndash; end standard drop down &ndash;&gt;-->
         <!-- grid view -->
         </ul><!-- end nav navbar-nav -->
         </div><!-- end #navbar-collapse-1 -->
@@ -264,6 +267,7 @@
         <div class="row">
             <div class="col-md-9 pull-right">
                 <div class="row">
+                    <div id="row-content">
                     <div class="col-sm-12 col-md-12">
                         <ol class="breadcrumb">
                             <li><a href="#">Home</a></li>
@@ -385,43 +389,39 @@
                                 </ul>
                     </div>
                 </div>
+              </div>
             </div>
             <div class="col-md-3 pull-left"  style="border-right: 1px solid #c0c0c0; min-height: 600px">
 
+                <div class="row">
+
+                    <h3>
+                        Shopping Cart
+                    </h3>
+
+
+
+                </div>
+
+
+
 
                 <form>
-
                     <div class="form-group">
-
                         <label for="inputEmail">Email</label>
-
                         <input type="email" class="form-control" id="inputEmail" placeholder="Email">
-
                     </div>
-
                     <div class="form-group">
-
                         <label for="inputPassword">Password</label>
-
                         <input type="password" class="form-control" id="inputPassword" placeholder="Password">
-
                     </div>
-
                     <div class="checkbox">
-
                         <label><input type="checkbox"> Remember me</label>
-
                     </div>
-
                     <button type="submit" class="btn btn-primary">Login</button>
-
                 </form>
-
-
             </div>
         </div>
-
-
     </div>
 </div>
 <!-- Start Footer -->
@@ -452,9 +452,10 @@
 
 
 <script src="js/bootstrap.min.js"></script>
-<script src="a_data/bootstrap-hover-dropdown.js"></script>
+<script src="assets/js/vendor/jquery-ui-1.10.3.custom.min.js" type="text/javascript"></script>
+<script src="js/bootstrap-hover-dropdown.js"></script>
 <script src="js/fhmm.js"></script>
-<script src="a_data/fitdivs.js"></script>
+<script src="js/fitdivs.js"></script>
 <script>
     $(document).ready(function(){
         // Target your .container, .wrapper, .post, etc.
@@ -468,6 +469,8 @@
         e.stopPropagation()
     })
 </script>
-<script src="a_data/js"></script><script src="a_data/main.js" type="text/javascript"></script>
+<!--<script src="js/js"></script>-->
+        <!--<script src="js/main.js" type="text/javascript"></script>-->
+<script src="js/menu.js" type="text/javascript"></script>
 </body>
 </html>
