--- a/index.html
+++ b/index.html
@@ -280,11 +280,12 @@
 
                     <div class="col-sm-4 col-md-4">
                         <div class="thumbnail c-product">
+                         <a href="#detail-product.html" class="navlink">
                             <div class="third">
-                            <!--<img src="img/prod1.gif" alt="2" />-->
                             <div class="c-desc">Lorem ipsum, atau ringkasnya lipsum, adalah teks standar yang ditempatkan untuk mendemostrasikan elemen grafis atau presentasi visual seperti font, tipografi, dan tata letak. Maksud penggunaan lipsum adalah agar pengamat tidak terlalu berkonsentrasi kepada arti harfiah per kalimat, melainkan lebih kepada elemen desain dari teks yang dipresentasi.</div>
                             <div class="top"><img src="img/prod1.gif" alt="1" /></div>
                            </div>
+                         </a>
                             <div class="c-caption-product">
                              Laptop Laptopan <br>
                              <a href="#">10 Review</a>
@@ -395,9 +396,9 @@
 
                 <div class="row">
 
-                    <h3>
+                    <h1 class="btn btn-primary">
                         Shopping Cart
-                    </h3>
+                    </h1>
 
 
 
